Add fairness test